--- a/theme.toml
+++ b/theme.toml
@@ -1,6 +1,10 @@
+name = "Slim"
 author = "Zhe Zhang"
 description = "A slim minimal theme for Hugo."
 license = "MIT"
-name = "Slim"
-source_repo = ""
+source_repo = "https://github.com/zhe/hugo-theme-slim"
 tags = ["minimal", "clean", "neat"]
+
+[author]
+  name = "Zhe Zhang"
+  homepage = "http://zhezhang.co"
