update README and theme.toml

--- a/theme.toml
+++ b/theme.toml
@@ -1,9 +1,12 @@
 name = "Slim"
-description = "A slim minimal theme for Hugo."
 license = "MIT"
-source_repo = "https://github.com/zhe/hugo-theme-slim"
-tags = ["minimal", "clean", "neat"]
+licenselink = "https://github.com/zhe/hugo-theme-slim/blob/master/LICENSE.md"
+description = "A slim minimal theme for Hugo."
+homepage = "https://github.com/zhe/hugo-theme-slim"
+tags = ["minimal", "clean", "neat", "black white", "blog"]
+features = ["blog"]
+min_version = 0.13
 
 [author]
-  name = "Zhe Zhang"
-  homepage = "http://zhezhang.co"
+    name = "Zhe Zhang"
+    homepage = "http://zhezhang.co"
